--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     dataBinding.enabled = true
 
@@ -101,7 +101,7 @@ dependencies {
 //    implementation('com.github.bumptech.glide:glide:4.8.0') {
 //        exclude group: "com.android.support"
 //    }
-    implementation "com.android.support:support-fragment:${rootProject.ext.glideVersion}"
+    implementation 'androidx.fragment:fragment:1.0.0-beta01'
 
     //Exoplayer
     implementation 'com.google.android.exoplayer:exoplayer-core:2.8.4'
@@ -112,7 +112,7 @@ dependencies {
 
     implementation 'com.google.firebase:firebase-core:16.0.6'
     implementation 'com.google.firebase:firebase-auth:16.1.0'
-    implementation 'com.facebook.android:facebook-login:[4,5)'
+    implementation 'com.google.firebase:firebase-storage:16.0.5'
 
 }
 
