Working on Followers and stuff

--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,9 @@ buildscript {
             url 'https://maven.google.com/'
             name 'Google'
         }
+        maven {
+            url "https://public.repo.sygic.com/repository/maven-sygic-releases/"
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.2.1'
