--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,9 @@
         <uses-library
             android:name="org.apache.http.legacy"
             android:required="false" />
+
+        <meta-data android:name="com.here.android.maps.appid" android:value="wpVkBVrMNBv62Y6wn3oH"/>
+        <meta-data android:name="com.here.android.maps.apptoken" android:value="lXRwFvCh4S1QJXZADUzu_Q"/>
     </application>
 
 </manifest>
